Add YAML and JUnit libraries

--- a/pom.xml
+++ b/pom.xml
@@ -84,4 +84,22 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+
+        <!-- YAML library -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.17</version>
+        </dependency>
+
+        <!-- JUnit library -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>5.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 </project>
