Update config.yml inconsistency

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,11 +2,11 @@
 
 # Database configuration
 database:
-  host: "127.0.0.1"
-  port: 3306
-  user: root
-  password: ""
+  hostname: "127.0.0.1"
   database: "child_in_time"
+  username: root
+  password: ""
+  port: 3306
 
 # Version information
 version:
