Add MySQL JDBC connector dependency

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
 
     <dependencies>
 
+        <!-- MySQL JDBC connector -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
         <!-- Apache commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
