--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
             <version>5.1.6</version>
         </dependency>
 
+        <!-- SQLite JDBC connector -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.11.2</version>
+        </dependency>
+
         <!-- Apache commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
