--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>5.0-SNAPSHOT</version>
+            <version>4.12</version>
         </dependency>
 
     </dependencies>
