Add Java faker library dependency

--- a/pom.xml
+++ b/pom.xml
@@ -122,5 +122,12 @@
             <version>4.12</version>
         </dependency>
 
+        <!-- Faker library -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.10</version>
+        </dependency>
+
     </dependencies>
 </project>
