--- a/pom.xml
+++ b/pom.xml
@@ -129,5 +129,12 @@
             <version>0.10</version>
         </dependency>
 
+        <!-- JCalendar library, http://mvnrepository.com/artifact/com.toedter/jcalendar -->
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 </project>
