--- a/pom.xml
+++ b/pom.xml
@@ -136,5 +136,12 @@
             <version>1.4</version>
         </dependency>
 
+        <!-- JFreeCharts library, http://mvnrepository.com/artifact/jfree/jfreechart -->
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
     </dependencies>
 </project>
